# Dotify

./: .gitignore  ENVIRONMENT_LAYER.md  LICENSE  README.md  cli.py  cookies.txt  dummy_urls.txt  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
dotify/: __init__.py  cli.py  utils.py  web.py
dotify/api/: api.py  exceptions.py  totp.py
dotify/api/proto/: audio_files_extension_pb2.py
dotify/cli/: cli.py  cli_config.py  config_file.py  env_commands.py
dotify/downloader/: base.py  constants.py  downloader.py  exceptions.py  types.py
dotify/env/: __init__.py  checks.py  doctor.py  errors.py  paths.py  setup.py
dotify/interface/: audio.py  base.py  episode.py  exceptions.py  interface.py  song.py  types.py  video.py
dotify/templates/: index.html  settings.html
