[project]
name = "dotify-cli"
version = "2.0.11"
description = "A command-line app for downloading songs, podcasts and videos from Spotify with smart environment management."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "async-lru>=2.1.0",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "dataclass-click>=1.0.4",
    "httpx>=0.28.1",
    "httpx-retries>=0.4.6",
    "inquirerpy>=0.3.4",
    "mutagen>=1.47.0",
    "pillow>=12.1.0",
    "protobuf>=6.33.5",
    "pybase62>=1.0.0",
    "pycryptodome>=3.23.0",
    "pywidevine>=1.9.0",
    "unplayplay>=0.0.2",
    "yt-dlp>=2026.2.4",
]

[project.urls]
repository = "https://github.com/AsHfIEXE/Dotify"

[project.scripts]
dotify = "dotify.cli.cli:main"

[project.optional-dependencies]
librespot = [
    "librespot>=0.0.1",
]
dev = [
    "asynctest>=0.13.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
]
